<resources>
    <string name="app_name">L02-Registration App</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="sub_name">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>

</resources>